--- a/templates/tag.html
+++ b/templates/tag.html
@@ -47,8 +47,8 @@
             <path id="pathHome" fill-rule="evenodd"></path>
         </svg>
     </a>
-    <a href="https://player.focalors.ltd/#/" class="btn btn-invisible circle" title="music" target="_blank">
-        <svg class="octicon" width="16" height="16" >
+    <a href="{{ blogBase['musicUrl'] }}" id="buttonHome" class="btn btn-invisible circle" title="{{ i18n['music'] }}">
+        <svg class="octicon" width="16" height="16">
             <path id="music" fill-rule="evenodd"></path>
         </svg>
     </a>
