--- a/templates/tag.html
+++ b/templates/tag.html
@@ -47,7 +47,7 @@
             <path id="pathHome" fill-rule="evenodd"></path>
         </svg>
     </a>
-    <a href="{{ blogBase['musicUrl'] }}" id="buttonHome" class="btn btn-invisible circle" title="{{ i18n['music'] }}">
+    <a href="{{ blogBase['exlink'] }}" id="buttonHome" class="btn btn-invisible circle" title="{{ i18n['music'] }}">
         <svg class="octicon" width="16" height="16">
             <path id="music" fill-rule="evenodd"></path>
         </svg>
