--- a/templates/plist.html
+++ b/templates/plist.html
@@ -40,8 +40,8 @@
 {% block header %}
 <div class="title-left">
     <img src="{{ blogBase['avatarUrl'] }}" class="avatar circle" id="avatarImg" alt="avatar">
-    {%- if blogBase['displayTitle']=='Meekdai' -%}
-    <a class="blogTitle" href="https://meekdai.com"><span style="font-size:0;">M</span>eekdai</a>
+    {%- if blogBase['displayTitle']=='Monsieur-Q' -%}
+    <a class="blogTitle" href="https://blog.chggang.site"><span style="font-size:0;">M</span>eekdai</a>
     {% else -%}
     <a class="blogTitle">{{ blogBase['displayTitle'] }}</a>
     {%- endif -%}
