--- a/templates/tag.html
+++ b/templates/tag.html
@@ -47,6 +47,11 @@
             <path id="pathHome" fill-rule="evenodd"></path>
         </svg>
     </a>
+        <a href="{{ blogBase['audioUrl'] }}" id="buttonHome" class="btn btn-invisible circle" title="{{ i18n['music'] }}">
+        <svg class="octicon" width="16" height="16">
+            <path id="music" fill-rule="evenodd"></path>
+        </svg>
+    </a>
     <a class="btn btn-invisible circle" onclick="modeSwitch()" title="{{ i18n['switchTheme'] }}" {%- if blogBase['themeMode']=='fix' -%}style="display:none;"{%- endif -%}>
         <svg class="octicon" width="16" height="16" >
             <path id="themeSwitch" fill-rule="evenodd"></path>
