--- a/templates/post.html
+++ b/templates/post.html
@@ -50,7 +50,7 @@
             <path id="pathHome" fill-rule="evenodd"></path>
         </svg>
     </a>
-    <a href="{{ blogBase['music'] }}" id="buttonHome" class="btn btn-invisible circle" title="{{ i18n['music'] }}">
+    <a href="{{ blogBase['music'] }}" id="music" class="btn btn-invisible circle" title="{{ i18n['music'] }}">
         <svg class="octicon" width="16" height="16">
             <path id="music" fill-rule="evenodd"></path>
         </svg>
