--- a/templates/plist.html
+++ b/templates/plist.html
@@ -52,7 +52,7 @@
             <path id="pathSearch" fill-rule="evenodd"></path>
         </svg>
     </a>
-        <a href="{{ blogBase['audioUrl'] }}/tag.html" id="buttonSearch" class="btn btn-invisible circle" title="{{ i18n['music'] }}">
+        <a href="{{ blogBase['audioUrl'] }}" id="music" class="btn btn-invisible circle" title="{{ i18n['music'] }}">
         <svg class="octicon" width="16" height="16" >
             <path id="music" fill-rule="evenodd"></path>
         </svg>
