--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
     {%- if blogBase['filingNum']!='' -%}
     <span id="filingNum"><a href="https://beian.miit.gov.cn/" target="_blank">{{ blogBase['filingNum'] }}</a> • </span>
     {%- endif %}
-    <span id="runday"></span><span>Powered by <a href="https://blog.chggang.site" target="_blank">Q</a></span>
+    <span id="runday"></span><span>Powered by <a href="https://blog.chggang.site" target="_blank">Monsieur Q</a></span>
 </div>
 
 <script>
